# magic_ball_bot

./: Makefile  pyproject.toml
magic_ball_bot/: bot.py  sticker_lists.py
